pmd check - fix